# Copyright (c) 2012 Alexander Sviridenko

DOXYGEN_CONFIG = docs.doxygen

# Libraries
lib_LIBRARIES = lib/libles.a

lib_les_a_SOURCES = decomposition.cpp finkelstein.cpp \
              interaction_graph.cpp \
              milp_problem.cpp quasiblock_milp_problem.cpp \
              packed_vector.cpp packed_matrix.cpp
