# Initialization
AC_INIT([les], [0.1], [], [], [oleks.sviridenko@gmail.com])
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE([foreign no-define])

# Tools to use
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AC_ENABLE_SHARED
AC_LIBTOOL_WIN32_DLL
AC_LIBTOOL_SETUP
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_CONFIG_FILES([
	Makefile
])

AC_OUTPUT
