# Copyright (c) 2012 Alexander Sviridenko

# autoconf macros
ACLOCAL_AMFLAGS = -I m4

# Libraries
lib_LIBRARIES = lib/libles.a

libles_a_SOURCES = decomposition.cpp finkelstein.cpp \
              interaction_graph.cpp \
              milp_problem.cpp quasiblock_milp_problem.cpp \
              packed_vector.cpp packed_matrix.cpp

